# ETL_Final

./: .gitignore  LICENSE.md  README.md  info.tex  my-constraints.txt  pyproject.toml  requirements.txt
airflow_env/: pyvenv.cfg
airflow_home/: airflow.cfg  standalone_admin_password.txt
dags/: dag_01_getdata.py  dag_02_extract.py  dag_03_transform.py  dag_master.py
dags/Data/: data_quality_report_Dataset_20250327_091413.html  data_quality_report_Dataset_20250327_160151.html  data_quality_report_Dataset_20250328_141150.html
dags/credentials/: config.yaml
dags/sql/: create_tables.sql
dags_example/: DAG_extraction_example.py  Extract.py  Transform.py  airflow cheat-sheet.txt  dag.py  dag_02_extract.py  dag_03_transform copy 3.py  dag_03_transform copy.py  dag_extract_ver1.py  dag_project.py  dag_python.py
documentation/: ETLprj_extract.html  ETLprj_transform.html  ETLprj_transform.ipynb  Final paper ETL Es.docx  csv_load.py
documentation/Evidencias/: ETLprj_entrega_2.html
documentation/Evidencias/Diagramas/: ETL_Diagram.vuerd.json  dag_01_getdata.mmd  dag_02_extract.mmd  dag_03_transform.mmd
documentation/Evidencias/notebooks/: ETL2_notebook.ipynb  ETLprj_extract.ipynb
metabase/: metabase.db.mv.db  metabase.db.mv.db.mv.db  metabase.db.mv.db.trace.db  metabase.db.trace.db
