[project]
name = "etl-final"
version = "0.1.0"
description = "Entrega proyecto final ETL"
authors = [
    {name = "Yoniliman Galvis",email = "yoniliman.galves@uao.edu.co"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.16 <= 3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
